fixing alignment

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -379,7 +379,7 @@ section{
 	height: 330px;
 	padding-top: 50px;
 	img{
-		margin-top: 10px;
+		margin-top: 0px;
 		margin-bottom: 25px;
 	}
 	@media #{$media-xs} {
